crates/keron-lang/tests/corpus/errors/parse/missing_value.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected end of input, expected expression
  --> 2:1
  |
2 | 
  | ^
